--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "an-array-of-english-words": "^2.0.0",
+    "axios": "1.6.7",
     "bootstrap": "^5.3.3",
+    "genius-lyrics": "^4.4.7",
+    "llyrics": "^1.1.7",
+    "lyrics-search": "^1.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
